src/test/compile-fail/unconstrained-none.rs
// Copyright 2013-2015 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// Issue #5062

fn main() {
    None; //~ ERROR unable to infer enough type information about `T` [E0282]
          //~| NOTE cannot infer type for `T`
          //~| NOTE type annotations or generic parameter binding
}
